--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,8 +11,12 @@
 }
 
 @keyframes Home-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .Card-media {
@@ -24,32 +28,27 @@
 
 .Card-link {
   text-decoration: none;
+  display: block;
 }
 
 .Card {
   text-align: left;
   margin-bottom: 50px;
 }
-
 .fade-enter {
-  opacity: 0;
-}
-.fade-enter-active {
-  opacity: 1;
-  transition: opacity 300ms ease-out;
-}
-.fade-leave {
-  opacity: 1;
-}
-.fade-leave-active {
-  opacity: 0;
-  transition: opacity 300ms ease-out;
+  opacity: 0.01;
 }
 
-.fade-appear {
-  opacity: 0;
-}
-.fade-appear-active {
+.fade-enter.fade-enter-active {
   opacity: 1;
-  transition: opacity 1000ms ease-out;
+  transition: opacity 1000ms ease-in;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit.fade-exit-active {
+  opacity: 0.01;
+  transition: opacity 800ms ease-in;
 }
