--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -3,6 +3,14 @@
   width: 100%;
   background-position: center;
   background-size: cover;
+  position: relative;
+}
+
+.black-box {
+  width: 100%;
+  height: 25%;
+  background: #000;
+  transform-origin: right;
 }
 
 .Article-body {
