--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,26 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-  padding-top: 64px;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #040205;
+    padding-top: 64px;
 }
 
+.AppBar {
+    background-color: transparent !important;
+}
+.Card {
+    display: inline;
+    width: 30%;
+    margin-right: 3.3333%;
+    float: left;
+    position: relative;
+}
+
+.cardInfos {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+}
