--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -1,9 +1,13 @@
 .Article-img {
-  height: calc(100vh - 64px);
-  width: 100%;
+  height: 380px;
+  width: 20%;
   background-position: center;
   background-size: cover;
   position: relative;
+  background-repeat: no-repeat;
+  margin-left: 5%;
+  float: left;
+  margin-top: 30px;
 }
 
 .black-box {
@@ -15,11 +19,17 @@
 
 .Article-body {
   margin-top: 30px;
+  width: 70%;
+  float: right;
 }
 
 .Article-title {
   font-size: 1.4rem;
   font-weight: 400;
   text-transform: upeprcase;
+  margin-bottom: 30px;
+}
+.Article-plot{
+  text-align: left;
   margin-bottom: 30px;
 }
