--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -1,9 +1,10 @@
 .Article-img {
   height: calc(100vh - 64px);
-  width: 100%;
+  width: 50%;
   background-position: center;
   background-size: cover;
   position: relative;
+  float: left;
 }
 
 .black-box {
