--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -19,9 +19,6 @@
   }
 }
 
-.Card {
-}
-
 .Card-media {
   padding-top: 50%;
   width: 100%;
@@ -36,8 +33,12 @@
 
 .Card {
   text-align: left;
+  display: inline-block;
+  margin-left: 30px;
   margin-bottom: 50px;
+  width: 45%;
 }
+
 .fade-enter {
   opacity: 0.01;
 }
