--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -55,3 +55,12 @@
   opacity: 0.01;
   transition: opacity 800ms ease-in;
 }
+
+.Home-advanced-search {
+  margin-bottom: 50px;
+}
+
+.select {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
