--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -19,9 +19,6 @@
   }
 }
 
-.Card {
-}
-
 .Card-media {
   padding-top: 50%;
   width: 100%;
@@ -54,4 +51,56 @@
 .fade-exit.fade-exit-active {
   opacity: 0.01;
   transition: opacity 300ms ease-in-out;
+}
+.Card {
+  display: inline;
+  width: 30%;
+  margin-right: 3.3333%;
+  float: left;
+  position: relative;
+}
+.Card-link > div:last-of-type {
+  display: none;
+}
+.cardInfos {
+  position: absolute;
+  top: -5px;
+  left: 0;
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  z-index: 1;
+  opacity: 0;
+  transition: 0.3s ease-in-out;
+  width: 100%;
+  height: 100%;
+}
+.Card:hover .cardInfos {
+  opacity: 1;
+  transform: translateY(5px);
+  -webkit-box-shadow: inset 0px -7px 300px 17px rgba(0,0,0,0.8);
+  -moz-box-shadow: inset 0px -7px 300px 17px rgba(0,0,0,0.8);
+  box-shadow: inset 0px -7px 300px 17px rgba(0,0,0,0.8);
+}
+
+.Card .cardInfos p{
+  position: absolute;
+  left: 50%;
+  bottom: 10px;
+  width: 80%;
+  transform: translate(-50%,-50%);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  line-height: 140%;
+  font-family: 'Roboto', sans-serif;
+}
+
+.Card-media {
+  padding-bottom: 100%;
+}
+.searchbar input{
+  color: white !important;
+}
+.searchbar > div:last-child > hr:last-child{
+  border-color: red !important;
 }
