--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -57,7 +57,13 @@
 }
 
 .Home-advanced-search {
-  margin-bottom: 50px;
+  width: 200px;
+  height: 20px;
+  padding-left: 5px;
+  background: none;
+  color: #000;
+  border: none;
+  border-bottom: 1px solid gray;
 }
 
 .select {
