--- a/src/components/Home/Input.css
+++ b/src/components/Home/Input.css
@@ -1,12 +1,13 @@
 .advanced-search {
+  width: 200px;
+  height: 20px;
+  padding-left: 5px;
+  background: none;
+  color: #000;
+  border: none;
+  border-bottom: 1px solid gray;
   margin-top: 20px;
   margin-bottom: 50px;
-  height: 30px;
-  width: 30%;
-  border-radius: 5px;
-  font-size: 18px;
-  font-style: italic;
-  text-align: center;
 }
 
 /* textFieldRoot: {
