--- a/src/components/Header/Menu.css
+++ b/src/components/Header/Menu.css
@@ -6,9 +6,9 @@
     bottom: 0;
     left: 0;
     z-index: 1000;
-    background: #fff;
     text-align: left;
     transition: 0.3s;
+    background-color: white;
 }
 
 .Menu-link {
@@ -16,6 +16,7 @@
     color: rgba(0, 0, 0, 0.87);
     padding-left: 30px;
     padding-right: 30px;
+    color: black;
 }
 
 .Overlay {
