--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -1,25 +1,53 @@
 .Article-img {
   height: calc(100vh - 64px);
   width: 100%;
+  background: black;
   background-position: center;
   background-size: cover;
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .black-box {
   width: 100%;
-  height: 25%;
+  height: 100%;
   background: #000;
-  transform-origin: right;
 }
 
-.Article-body {
-  margin-top: 30px;
+.Article-wrapper {
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 20px 40px;
+}
+
+.Article-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+  text-align: left;
+  color: white;
+}
+
+.Article-info p {
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.5;
+  margin: 25px 0 0 0;
 }
 
 .Article-title {
-  font-size: 1.4rem;
+  font-size: 35px;
   font-weight: 400;
-  text-transform: upeprcase;
-  margin-bottom: 30px;
+}
+
+.Article-director {
+  font-family: serif;
+  font-size: 25px;
+  font-weight: 400;
+  font-style: italic;
 }
