--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,15 @@
   text-align: center;
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 body {
-  background: #f2f3f4;
+  overflow-x: hidden;
+  background: #fff;
 }
 .container {
   /* On centre */
