--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -8,6 +8,9 @@
 
 .Home-intro {
   font-size: large;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @keyframes Home-logo-spin {
