--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -55,3 +55,16 @@
   opacity: 0.01;
   transition: opacity 800ms ease-in;
 }
+
+
+.filterType {
+  width: 100%;
+  text-align: left;
+  margin: 30px 0;
+}
+
+.selectFilter {
+  background: none;
+  border: none;
+  font-size: 16px;
+}
