--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -20,11 +20,16 @@
 }
 
 .Card {
+  display: inline-block;
+  width: 33%;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .Card-media {
   padding-top: 50%;
   width: 100%;
+  height: 22rem;
   background-position: center;
   background-size: cover;
 }
@@ -32,6 +37,7 @@
 .Card-link {
   text-decoration: none;
   display: block;
+  background-color: rgba(225, 225, 225, 0.4);
 }
 
 .Card {
