--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,6 +9,12 @@
 .AppBar {
   position: fixed !important;
   top: 0;
+  background: #ffc107 !important;
+}
+.AppBar h1 {
+  color: #000 !important;
+  text-align: left;
+  font: 30px Impact, Charcoal, sans-serif;
 }
 
 .active {
@@ -55,7 +61,7 @@
 /* Icon 1 */
 
 .Menu-icon {
-  width: 30px;
+  width: 25px;
   margin-top: 14px;
   margin-bottom: 14px;
   height: 20px;
@@ -71,7 +77,7 @@
   position: absolute;
   height: 3px;
   width: 100%;
-  background: #fff;
+  background: #000;
   opacity: 1;
   left: 0;
   transform: rotate(0deg);
@@ -84,6 +90,7 @@
 
 .Menu-icon span:nth-child(2) {
   top: calc(50% - 1.5px);
+  width: 80%;
 }
 
 .Menu-icon span:nth-child(3) {
