--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -10,6 +10,11 @@
   font-size: large;
 }
 
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
 @keyframes Home-logo-spin {
   from {
     transform: rotate(0deg);
@@ -26,7 +31,9 @@
   padding-top: 50%;
   width: 100%;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: black;
 }
 
 .Card-link {
