--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -19,7 +19,13 @@
 .Article-wrapper {
   height: 100%;
   width: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  background: -moz-linear-gradient(270deg, rgba(128,128,128,0.3) 0%, rgba(0,0,0,1) 100%); /* ff3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(128,128,128,0.3)), color-stop(100%, rgba(0,0,0,1))); /* safari4+,chrome */
+  background: -webkit-linear-gradient(270deg, rgba(128,128,128,0.3) 0%, rgba(0,0,0,1) 100%); /* safari5.1+,chrome10+ */
+  background: -o-linear-gradient(270deg, rgba(128,128,128,0.3) 0%, rgba(0,0,0,1) 100%); /* opera 11.10+ */
+  background: -ms-linear-gradient(270deg, rgba(128,128,128,0.3) 0%, rgba(0,0,0,1) 100%); /* ie10+ */
+  background: linear-gradient(180deg, rgba(128,128,128,0.3) 0%, rgba(0,0,0,1) 100%); /* w3c */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#808080', endColorstr='#000000',GradientType=0 ); /* ie6-9 */ 
   padding: 20px 40px;
 }
 
