--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -26,7 +26,7 @@
   padding-top: 50%;
   width: 100%;
   background-position: center;
-  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .Card-link {
