--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -23,3 +23,13 @@
   text-transform: upeprcase;
   margin-bottom: 30px;
 }
+
+h3 {
+  font-size: 17px;
+  margin: 10px 0; 
+}
+
+p {
+  text-align: left;
+  margin: 5px 0; 
+}
