--- a/src/Style/CssComponents/__Movie.scss
+++ b/src/Style/CssComponents/__Movie.scss
@@ -8,6 +8,8 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: center;
+        margin: 0 auto;
+        width: 80%;
         
         .informations {
             padding: 2em;
@@ -16,13 +18,10 @@ body {
             .Movie-title {
                 font-family: 'Inconsolata';
             }
-            .description {
-                
-            }
         }
         .Movie-img {
-            height: calc(100vh - 64px);
-            width: 30%;
+            
+            width: 100%;
             background-position: center;
             background-size: cover;
             position: relative;
